# ARM-VirtualMachine

./: CMakeLists.txt  Instruction.cpp  Instruction.h  Loop.cpp  Loop.h  Makefile  MyInput.cpp  MyInput.h  README.md  Scanner.cpp  Scanner.h  VirtualMachine.cpp  VirtualMachine.h  main.cpp
MyTest/: runtest.sh
MyTest/output/: README.md
MyTest/queue/: README.md
MyTest/testcase/T2/: input.txt  output.txt
MyTest/testcase/T3/: input.txt  output.txt
MyTest/testcase/T5/: memory.txt
MyTest/testcase/T6/: memory.txt
MyTest/testcase/T7/: output.txt
MyTest/testcase/T8/: input.txt
testcases/T1/: input.txt  memory.txt  output.txt
testcases/T10/: input.txt
testcases/T2/: memory.txt
testcases/T4/: input.txt  memory.txt  output.txt
testcases/T5/: input.txt  output.txt
testcases/T6/: input.txt  output.txt
testcases/T7/: input.txt
testcases/T9/: input.txt  output.txt
